removed unused article

--- a/homepage.html
+++ b/homepage.html
@@ -89,17 +89,13 @@
     <section id="home_main_container">
         <article id="home_main">
             <div id="home_main_profile_box">
-                <img id="home_main_profile" src="images/main/profile.jpg" alt="내 사진">
+                <h1><img id="home_main_profile" src="images/main/profile.jpg" alt="내 사진">
+                </h1>
                 <h1>Dream needs Efforts</h1>
                 <a href="https://www.facebook.com/suyoung9972" target="_blank">Facebook</a>
                 <a href="https://instagram.com/jjungssu000" target="_blank">Instagram</a>
             </div>
         </article>
-        <article><img src="images/main/p1.jpg" alt=""></article>
-        <article><img src="images/main/p1.jpg" alt=""></article>
-        <article><img src="images/main/p1.jpg" alt=""></article>
-        <article><img src="images/main/p1.jpg" alt=""></article>
-        <article><img src="images/main/p1.jpg" alt=""></article>
     </section>
     <script>
     </script>
