--- a/homepage.html
+++ b/homepage.html
@@ -58,14 +58,19 @@
             object-fit: cover;
             text-align: center;
         }
+        /* #home_main div#home_main_profile_box .home_main_text_2 {
+			margin: 0 50px;
+            object-fit: cover;
+            text-align: center;
+        } */
 
-        #second_main div#second_main_text_box {
+        /* #second_main div#second_main_text_box {
             position: relative;
             text-align: center;
             margin: auto;
             width: 500px;
             height: 800px;
-            background: #273869;
+            background: #ffffff;
             margin-top: 50px;
             padding-top: 50px;
 			overflow: hidden;
@@ -77,7 +82,8 @@
 			margin: 0 50px;
             object-fit: cover;
             text-align: center;
-        }
+        } */
+
         a {
             text-decoration: none;
         }
@@ -98,6 +104,11 @@
 			font-size: 0;
 			transition: .5s ease;
 		}
+        
+        #text_2 {
+            font-size: 15px;
+            color: #ffffff
+        }
 
         img.sajindeul {
             object-fit: cover;
@@ -133,7 +144,7 @@
             height: 1px;
             opacity: .15;
             margin: 1em 0;
-            background-image: -webkit-linear-gradient(left, #273869, #273869, #273869);
+            background-image: -webkit-linear-gradient(left, black,black,black);
         }
     </style>
 </head>
@@ -151,28 +162,20 @@
                     <img class="home_main_profile" src="images/main/p8.jpg" alt="내 사진">
                     <img class="home_main_profile" src="images/main/p4.jpg" alt="내 사진">
                     <img class="home_main_profile" src="images/main/p17.jpg" alt="내 사진">
-				</div>
-				<button id="button_prev"><img src="http://addplaybuttontoimage.way4info.net/Images/Icons/7.png" alt="prev"></button>
-				<button id="button_next"><img src="http://addplaybuttontoimage.way4info.net/Images/Icons/7.png" alt="next"></button>
+                </div>
                 <h1>Dream needs Efforts</h1>
                 <a href="https://www.facebook.com/suyoung9972" target="_blank">Facebook</a>
                 <a href="https://instagram.com/jjungssu000" target="_blank">Instagram</a>
                 <hr class="hr_line">
-            </div>
-        </article>
-    </section>
-    <section id="second_main_container">
-        <article id="second_main">
-            <div id="second_main_text_box">
-                <div id="second_aekja">
-                    <p>1</p>
-                    <p>2</p>
-                    <p>3</p>
-                    <p>4</p>
-                    <p>5</p>
-                    <p>6</p>
-                    <p>7</p>
-                    <p>8</p>
+                <div id="text_2">
+                    <p class="home_main_profile">1</p>
+                    <p class="home_main_profile">2</p>
+                    <p class="home_main_profile">3</p>
+                    <p class="home_main_profile">4</p>
+                    <p class="home_main_profile">5</p>
+                    <p class="home_main_profile">6</p>
+                    <p class="home_main_profile">7</p>
+                    <p class="home_main_profile">8</p>    
                 </div>
                 <button id="button_prev"><img src="http://addplaybuttontoimage.way4info.net/Images/Icons/7.png" alt="prev"></button>
 				<button id="button_next"><img src="http://addplaybuttontoimage.way4info.net/Images/Icons/7.png" alt="next"></button>
