j9972 --> Sn Kinos sended

--- a/fourth.html
+++ b/fourth.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>PAGE</title>
-    <link rel="stylesheet" href="fourth.css">
+    <link rel="stylesheet" href="fourth.css" media="">
 </head>
 <body>
     <header class=header1>
@@ -36,6 +36,7 @@
             </a>
         </section>
     </div>
+
     <div class="footer">
         <p id="fontFooter1">(주)에이리커컴퍼니</p>
         <hr id="hrFooter1">
