--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-    <title>드랍다운</title>
+    <title>판매 품목</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="new.css">
 </head>
