svg 이미지 보이게끔 div 태그안에 overflow: hidden 되어 있는거 지움

--- a/untitled1/sing.html
+++ b/untitled1/sing.html
@@ -46,11 +46,11 @@
 <!--                            <img class="mainPhoto" src="images2/노래방에서.jpg" alt="노래방에서 사진" >-->
 
                             <img class="mainPhoto" src="images2/Comethru.jpg" alt="Comethru 사진" >
-                            <img class="mainPhoto" src="images2/Believer.jpg" alt="Believer 사진" >
-                            <img class="mainPhoto" src="images2/Paris in the rain.jpg" alt="Paris in the rain 사진" >
+<!--                            <img class="mainPhoto" src="images2/Believer.jpg" alt="Believer 사진" >-->
+<!--                            <img class="mainPhoto" src="images2/Paris in the rain.jpg" alt="Paris in the rain 사진" >-->
 <!--                            <img class="mainPhoto" src="images2/memories.jpg" alt="memories 사진" >-->
-                    <img id="arrowButton1"src="images2/arrow.svg" alt="화살표">
-                    <img id="arrowButton2"src="images2/arrow.svg" alt="화살표">
+                    <button id="button_prev"><img class="button" id="arrowButtonPrev"src="images2/arrow.svg" alt="화살표">
+                    <button id="button_next"><img class="button" id="arrowButtonNext"src="images2/arrow.svg" alt="화살표">
                     </ul>
                 </div>
             </div>
