--- a/untitled1/sing.html
+++ b/untitled1/sing.html
@@ -12,10 +12,10 @@
     <header class="typeOfSing">
         <nav class="headerFont">
             <ul>
-                <li><a href="https://www.genie.co.kr/" id="genie">지니</a></li>
-                <li><a href="https://www.melon.com/" id="melon">멜론</a></li>
-                <li><a href="http://www.cjem.net/business/music" id="mNet">엠넷</a></li>
-                <li><a href="https://www.apple.com/kr/apple-music/" id="appleMusic">애플뮤직</a></li>
+                <li><a class="menu" href="https://www.genie.co.kr/" id="genie">지니</a></li>
+                <li><a class="menu" href="https://www.melon.com/" id="melon">멜론</a></li>
+                <li><a class="menu" href="http://www.cjem.net/business/music" id="mNet">엠넷</a></li>
+                <li><a class="menu" href="https://www.apple.com/kr/apple-music/" id="appleMusic">애플뮤직</a></li>
             </ul>
         </nav>
     </header>
@@ -50,8 +50,10 @@
 <!--                    </div>-->
                 </div>
             </div>
-            <button id="button_prev"><img class="button" id="arrowButtonPrev" src="images2/arrow.svg" alt="화살표">
-            <button id="button_next"><img class="button" id="arrowButtonNext" src="images2/arrow.svg" alt="화살표">
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+<!--            <button id="button_prev"><img class="button" id="arrowButtonPrev" src="images2/arrow.svg" alt="화살표">-->
+<!--            <button id="button_next"><img class="button" id="arrowButtonNext" src="images2/arrow.svg" alt="화살표">-->
         </article>
         <!-- The dots/circles -->
         <div class="ddoott">
