--- a/untitled1/sing.html
+++ b/untitled1/sing.html
@@ -19,6 +19,53 @@
             </ul>
         </nav>
     </header>
+    <section class="main">
+        <article class="slider_main">
+            <div class="slider_first">
+                <div class="slider_first_photocollector ">
+                    <div class="numbertext">1/3</div>
+                    <img class="mainPhoto" src="images2/Band.jpg" alt="band 사진" >
+                    <img class="mainPhoto" src="images2/Bamn.jpg" alt="bamn 사진" >
+                    <img class="mainPhoto" src="images2/덜어.jpg" alt="덜어 사진" >
+                    <img class="mainPhoto" src="images2/문제아.jpg" alt="문제아 사진" >
+                    <img class="mainPhoto" src="images2/관둬.jpg" alt="관둬 사진" >
+                    <img class="mainPhoto" src="images2/그녀를 사랑해줘요.jpg" alt="그녀를 사랑해줘요 사진" >
+                    <img class="mainPhoto" src="images2/조금취했어.jpg" alt="조금 취했어 사진" >
+                    <img class="mainPhoto" src="images2/꿈속에 너.jpg" alt="꿈속에 너 사진" >
+                    <img class="mainPhoto" src="images2/흔들리는 꽃들속에서.jpg" alt="흔들리는 꽃들속에서 사진" >
+                    <img class="mainPhoto" src="images2/벚꽃엔딩.jpg" alt="벚꽃엔딩 사진" >
+                    <img class="mainPhoto" src="images2/Paris in the rain.jpg" alt="Paris in the rain 사진" >
+                    <img class="mainPhoto" src="images2/memories.jpg" alt="memories 사진">
+                </div>
+            <div class="ddoott">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+            </div>
+<!--            <div>-->
+<!--                <div class="numbertext">2/3</div>-->
+<!--            <img class="mainPhoto" src="images2/주저하는 연인들을 위해.jpg" alt="주저하는 연인들을 위해 사진" >-->
+<!--            <img class="mainPhoto" src="images2/노래방에서.jpg" alt="노래방에서 사진" >-->
+<!--            <img class="mainPhoto" src="images2/Comethru.jpg" alt="Comethru 사진" >-->
+<!--            <img class="mainPhoto" src="images2/Believer.jpg" alt="Believer 사진" >-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div class="numbertext">3/3</div>-->
+<!--            </div>-->
+
+        </article>
+        <article class="slider_sub">
+            <div class="waiting">
+                <p id="prad">노래 대기열</p>
+            </div>
+        </article>
+    </section>
+    <footer class="footer_text">
+        <h1 class="text1">()Song()<small> phone-number ) 010-4906-9330</small></h1>
+        <h1 class="text2">()Song()<small> email ) j9972@naver.com</small></h1>
+        <h1 class="text3">()Song()<small> kakaotalkID ) katalk0702</small></h1>
+    </footer>
     <script src="sing.js"></script>
 </body>
 </html>
