버튼까지 넣고 dot 넣었음 근데 문제는 f12눌를떄 앨범의 크기가 줄어서 박스안에는 들어가지만 너무 작아져서 박스에 꽉안차고 빈공간이 생긴다

--- a/untitled1/sing.html
+++ b/untitled1/sing.html
@@ -37,11 +37,11 @@
                     <img class="mainPhoto" src="images2/Paris in the rain.jpg" alt="Paris in the rain 사진" >
                     <img class="mainPhoto" src="images2/memories.jpg" alt="memories 사진">
                 </div>
+            </div>
             <div class="ddoott">
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
-            </div>
             </div>
 <!--            <div>-->
 <!--                <div class="numbertext">2/3</div>-->
@@ -53,7 +53,10 @@
 <!--            <div>-->
 <!--                <div class="numbertext">3/3</div>-->
 <!--            </div>-->
-
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <!--            <button id="button_prev"><img class="button" id="arrowButtonPrev" src="images2/arrow.svg" alt="화살표">-->
+            <!--            <button id="button_next"><img class="button" id="arrowButtonNext" src="images2/arrow.svg" alt="화살표">-->
         </article>
         <article class="slider_sub">
             <div class="waiting">
