--- a/untitled1/sing.html
+++ b/untitled1/sing.html
@@ -22,9 +22,11 @@
     <section class="main">
         <article class="slider_main">
             <div class="slider_first">
-                <div class="slider_first_photocollector ">
+                <div class="slider_first_photocollector" onclick="off()">
                     <div class="numbertext">1/3</div>
+<!--                    <button class="btn" type="submit" onclick="on()"></button>-->
                     <img class="mainPhoto" src="images2/Band.jpg" alt="band 사진" >
+                    <div class="overlay">BAMN</div>
                     <img class="mainPhoto" src="images2/Bamn.jpg" alt="bamn 사진" >
                     <img class="mainPhoto" src="images2/덜어.jpg" alt="덜어 사진" >
                     <img class="mainPhoto" src="images2/문제아.jpg" alt="문제아 사진" >
@@ -37,16 +39,16 @@
                     <img class="mainPhoto" src="images2/Paris in the rain.jpg" alt="Paris in the rain 사진" >
                     <img class="mainPhoto" src="images2/memories.jpg" alt="memories 사진">
                 </div>
-                <div class="slider_second_photocollector ">
-                    <div class="numbertext">2/3</div>
-                    <img class="mainPhoto" src="images2/주저하는 연인들을 위해.jpg" alt="주저하는 연인들을 위해 사진" >
-                    <img class="mainPhoto" src="images2/노래방에서.jpg" alt="노래방에서 사진" >
-                    <img class="mainPhoto" src="images2/Comethru.jpg" alt="Comethru 사진" >
-                    <img class="mainPhoto" src="images2/Believer.jpg" alt="Believer 사진" >
-                </div>
-                <div class="slider_third_photocollector ">
-                    <div class="numbertext">3/3</div>
-                </div>
+<!--                <div class="slider_second_photocollector ">-->
+<!--                    <div class="numbertext">2/3</div>-->
+<!--                    <img class="mainPhoto" src="images2/주저하는 연인들을 위해.jpg" alt="주저하는 연인들을 위해 사진" >-->
+<!--                    <img class="mainPhoto" src="images2/노래방에서.jpg" alt="노래방에서 사진" >-->
+<!--                    <img class="mainPhoto" src="images2/Comethru.jpg" alt="Comethru 사진" >-->
+<!--                    <img class="mainPhoto" src="images2/Believer.jpg" alt="Believer 사진" >-->
+<!--                </div>-->
+<!--                <div class="slider_third_photocollector ">-->
+<!--                    <div class="numbertext">3/3</div>-->
+<!--                </div>-->
             </div>
 
             <div class="prev"><</div>
